--- a/Bluetooth Device Scanner/Resources/layout/ListViewStatusItem.xml
+++ b/Bluetooth Device Scanner/Resources/layout/ListViewStatusItem.xml
@@ -3,10 +3,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-	android:padding="10dp"
+	  android:padding="10dp"
     android:background="#f32600">
   <TextView
-      android:id="@+id/txtHeader"
+      android:id="@+id/txtStatus"
       android:layout_width="wrap_content"
       android:layout_height="30dp"
       android:textSize="17dp"
